--- a/ds/BUILD
+++ b/ds/BUILD
@@ -1,8 +1,9 @@
+load("@rules_cc//cc:defs.bzl", "cc_library")
+
 cc_library(
-    name = 'bipartite_graph',
+    name = "bipartite_graph",
     hdrs = [
-        "graph.h"
+        "bipartite_graph.h",
     ],
     visibility = ["//visibility:public"],
-
 )
