Implemented readGraph. Tests still pending

--- a/io/BUILD
+++ b/io/BUILD
@@ -4,6 +4,7 @@ cc_library(
     name = "io",
     hdrs = [
         "input_graph_manually.h",
+        "readGraph.h",
     ],
     visibility = ["//visibility:public"],
     deps = [
