Changed to stringstream and fixed build file

--- a/io/BUILD
+++ b/io/BUILD
@@ -1,4 +1,4 @@
-load("@rules_cc//cc:defs.bzl", "cc_library")
+load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
 
 cc_library(
     name = "io",
@@ -11,13 +11,14 @@ cc_library(
         "//ds:bipartite_graph",
     ],
 )
+
 cc_test(
     name = "io_test",
     srcs = ["readGraph_test.cc"],
     deps = [
         ":oscm",
         ":readGraph",
-        "//ds/fpt:fpt_graph"
+        "//ds/fpt:fpt_graph",
         "@com_google_googletest//:gtest_main",
     ],
 )
