--- a/ds/reduction_graph/BUILD
+++ b/ds/reduction_graph/BUILD
@@ -1,12 +1,24 @@
 load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
 
+# Additional functionality that depends on the core
 cc_library(
-    name = "reduction_graph",
+    name = "undo",
+    hdrs = [
+        "undo.h",
+    ],
+    visibility = ["//visibility:public"],
+    deps = [
+    ],
+)
+
+cc_library(
+    name = "r_graph",
     hdrs = [
         "r_graph.h",
     ],
     visibility = ["//visibility:public"],
     deps = [
+        ":undo",
     ],
 )
 
@@ -15,6 +27,7 @@ cc_test(
     srcs = ["r_graph_test.cc"],
     deps = [
         ":r_graph",
+        ":undo",
         "@com_google_googletest//:gtest_main",
     ],
 )
