fix some review comments

--- a/oscm/reduction_algorithm/BUILD
+++ b/oscm/reduction_algorithm/BUILD
@@ -3,7 +3,7 @@ load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
 cc_library(
     name = "reduction_algorithm",
     hdrs = [
-        "r_algorithm.h",
+        "reduction_algorithm.h",
     ],
     visibility = ["//visibility:public"],
     deps = [
@@ -12,8 +12,8 @@ cc_library(
 )
 
 cc_test(
-    name = "r_algorithm_test",
-    srcs = ["r_algorithm_test.cc"],
+    name = "reduction_algorithm_test",
+    srcs = ["reduction_algorithm_test.cc"],
     deps = [
         ":reduction_algorithm",
         "@com_google_googletest//:gtest_main",
