fix some review comments

--- a/ds/reduction_graph/BUILD
+++ b/ds/reduction_graph/BUILD
@@ -2,9 +2,9 @@ load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
 
 # Additional functionality that depends on the core
 cc_library(
-    name = "undo",
+    name = "UndoAlgorithmStep",
     hdrs = [
-        "undo.h",
+        "UndoAlgorithmStep.h",
     ],
     visibility = ["//visibility:public"],
     deps = [
@@ -18,7 +18,7 @@ cc_library(
     ],
     visibility = ["//visibility:public"],
     deps = [
-        ":undo",
+        ":UndoAlgorithmStep",
     ],
 )
 
@@ -26,8 +26,8 @@ cc_test(
     name = "reduction_graph_test",
     srcs = ["reduction_graph_test.cc"],
     deps = [
+        ":UndoAlgorithmStep",
         ":reduction_graph",
-        ":undo",
         "@com_google_googletest//:gtest_main",
     ],
 )
