Added test for the bipartite graph and fixed the storing of positions

--- a/ds/BUILD
+++ b/ds/BUILD
@@ -1,4 +1,4 @@
-load("@rules_cc//cc:defs.bzl", "cc_library")
+load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
 
 cc_library(
     name = "bipartite_graph",
@@ -6,4 +6,13 @@ cc_library(
         "bipartite_graph.h",
     ],
     visibility = ["//visibility:public"],
+)
+
+cc_test(
+    name = "bipartite_graph_test",
+    srcs = ["bipartite_graph_test.cc"],
+    deps = [
+        ":bipartite_graph",
+        "@com_google_googletest//:gtest_main",
+    ],
 )
