Something wrong with BUILD files and have to wait for merging of IO and reduction_algorithm

--- a/app/BUILD
+++ b/app/BUILD
@@ -8,7 +8,17 @@ cc_binary(
         "//ds:bipartite_graph",
         "//io",
         "//oscm",
+        "//toolkit/toolkit/app",
         "@com_google_absl//absl/flags:flag",
         "@com_google_absl//absl/flags:parse",
+    ],
+)
+
+cc_binary(
+    name = "runner",
+    deps = [
+        "//toolkit/toolkit/runner",
+        "//algos/sample_problem",
+        #add additional families here
     ],
 )
