--- a/io/BUILD
+++ b/io/BUILD
@@ -10,6 +10,7 @@ cc_library(
     deps = [
         "//ds:bipartite_graph",
         "//ds/reduction_graph",
+        "//oscm/reduction_algorithm",
         "@com_google_absl//absl/status",
     ],
 )
