--- a/oscm/heuristic_algorithm/BUILD
+++ b/oscm/heuristic_algorithm/BUILD
@@ -1,20 +1,21 @@
 load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
 
 cc_library(
-    name = "heuristic_graph",
+    name = "heuristic_algorithm",
     hdrs = [
-        "heuristic_graph.h",
+        "heuristic_algorithm.h",
     ],
     visibility = ["//visibility:public"],
     deps = [
+        "//ds/heuristic_graph",
     ],
 )
 
 cc_test(
-    name = "heuristic_graph_test",
-    srcs = ["heuristic_graph_test.cc"],
+    name = "heuristic_algorithm_test",
+    srcs = ["heuristic_algorithm_test.cc"],
     deps = [
-        ":heuristic_graph",
+        ":heuristic_algorithm",
         "@com_google_googletest//:gtest_main",
     ],
 )
