Revert "Merge branch 'toolkitV2' of https://github.com/alvarogarmen/AdvPractical into toolkitV2"
This reverts commit 1d8629c1bacbb96fe29dcc6cde11533288dc8683, reversing
changes made to 2012082c7762da263ee36d9e448284f66a06f9e8.

--- a/ds/heuristic_graph/BUILD
+++ b/ds/heuristic_graph/BUILD
@@ -3,7 +3,7 @@ load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
 cc_library(
     name = "heuristic_graph",
     hdrs = [
-        "heuristic_graph.h",
+        "h_graph.h",
     ],
     visibility = ["//visibility:public"],
     deps = [
@@ -11,8 +11,8 @@ cc_library(
 )
 
 cc_test(
-    name = "heuristic_graph_test",
-    srcs = ["heuristic_graph_test.cc"],
+    name = "h_graph_test",
+    srcs = ["h_graph_test.cc"],
     deps = [
         ":heuristic_graph",
         "@com_google_googletest//:gtest_main",
