--- a/io/BUILD
+++ b/io/BUILD
@@ -21,6 +21,7 @@ cc_test(
     srcs = ["ocsm_graph_reader_test.cc"],
     deps = [
         ":io",
+        "//ds/reduction_graph",
         "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/strings",
         "@com_google_googletest//:gtest_main",
