--- a/experiments/algorithms/BUILD
+++ b/experiments/algorithms/BUILD
@@ -13,7 +13,8 @@ cc_library(
         "@henrixapp_toolkit//toolkit/app:app_io_cc_proto",
         "@henrixapp_toolkit//toolkit/ds:empty_problem",
         "//io:io",
-        "//oscm/reduction_algorithm"
+        "//oscm/reduction_algorithm",
+        "//ds/helper:empty_problem",
     ],
     alwayslink=1,
 )
