--- a/ds/reduction_graph/BUILD
+++ b/ds/reduction_graph/BUILD
@@ -8,7 +8,7 @@ cc_library(
     ],
     visibility = ["//visibility:public"],
     deps = [
-        "@com_google_absl//absl/status",
+        "@abseil-cpp//absl/status",
     ],
 )
 
