--- a/oscm/reduction_algorithm/BUILD
+++ b/oscm/reduction_algorithm/BUILD
@@ -17,7 +17,7 @@ cc_test(
     srcs = ["reduction_algorithm_test.cc"],
     deps = [
         ":reduction_algorithm",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -26,6 +26,6 @@ cc_test(
     srcs = ["compute_crossings_test.cc"],
     deps = [
         ":reduction_algorithm",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
