--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -7,6 +7,7 @@ local_path_override(
 )
 bazel_dep(name = "abseil-cpp", version = "20230802.0")
 bazel_dep(name = "rules_python", version = "0.27.0")
+bazel_dep(name = "googletest", version = "1.14.0")
 python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
 
 python.toolchain(python_version = "3.10")
