--- a/ds/reduction_graph/BUILD
+++ b/ds/reduction_graph/BUILD
@@ -17,6 +17,6 @@ cc_test(
     srcs = ["reduction_graph_test.cc"],
     deps = [
         ":reduction_graph",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
