--- a/io/BUILD
+++ b/io/BUILD
@@ -24,6 +24,6 @@ cc_test(
         "//ds/reduction_graph",
         "@abseil-cpp//absl/status:statusor",
         "@abseil-cpp//absl/strings",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
