--- a/experiments/algorithms/BUILD
+++ b/experiments/algorithms/BUILD
@@ -3,7 +3,7 @@ cc_library(
     hdrs = [
         "reduction_algorithm.h",
         "barycenter_algorithm.h",
-        "median_algoritgh.h",
+        "median_algorithm.h",
     ],
     srcs = [
         "reduction_algorithm.cc",
