--- a/experiments/algorithms/BUILD
+++ b/experiments/algorithms/BUILD
@@ -1,29 +1,35 @@
+load("@rules_cc//cc:defs.bzl", "cc_library")
+
 cc_library(
     name = "algorithms",
+    srcs = [
+        "barycenter_algorithm.cc",
+        "heuristic_algorithm.cc",
+        "median_algorithm.cc",
+        "reduction_algorithm.cc",
+    ],
     hdrs = [
-        "reduction_algorithm.h",
         "barycenter_algorithm.h",
+        "heuristic_algorithm.h",
         "median_algorithm.h",
         "problems.h",
+        "reduction_algorithm.h",
     ],
-    srcs = [
-        "reduction_algorithm.cc",
-        "barycenter_algorithm.cc",
-        "median_algorithm.cc",
-        ],
     visibility = ["//visibility:public"],
     deps = [
-        "//ds/reduction_graph",
         "//ds:bipartite_graph",
+        "//ds/helper:empty_problem",
+        "//ds/heuristic_graph",
+        "//ds/reduction_graph",
+        "//io",
+        "//oscm/barycenter_algorithm",
+        "//oscm/heuristic_algorithm",
+        "//oscm/median_algorithm",
+        "//oscm/reduction_algorithm",
         "@abseil-cpp//absl/status:statusor",
         "@henrixapp_toolkit//toolkit/algorithms",
         "@henrixapp_toolkit//toolkit/app:app_io_cc_proto",
         "@henrixapp_toolkit//toolkit/ds:empty_problem",
-        "//io:io",
-        "//oscm/reduction_algorithm",
-        "//oscm/barycenter_algorithm",
-        "//oscm/median_algorithm",
-        "//ds/helper:empty_problem",
     ],
-    alwayslink=1,
+    alwayslink = 1,
 )
