Fixed merges and cleaned code

--- a/experiments/algorithms/BUILD
+++ b/experiments/algorithms/BUILD
@@ -14,9 +14,7 @@ cc_library(
         "barycenter_algorithm.h",
         "heuristic_algorithm.h",
         "median_algorithm.h",
-        "problems.h",
         "reduction_algorithm.h",
-        "barycenter_algorithm.h",
         "barycenter_heuristic_algorithm.h",
         "problems.h",
     ],
@@ -29,6 +27,7 @@ cc_library(
         "//io",
         "//oscm/barycenter_algorithm",
         "//oscm/heuristic_algorithm",
+        "//oscm/barycenter_heuristic_algorithm",
         "//oscm/median_algorithm",
         "//oscm/reduction_algorithm",
         "@abseil-cpp//absl/status:statusor",
