--- a/oscm/heuristic_algorithm/BUILD
+++ b/oscm/heuristic_algorithm/BUILD
@@ -8,6 +8,7 @@ cc_library(
     visibility = ["//visibility:public"],
     deps = [
         "//ds/heuristic_graph",
+        "//oscm/median_algorithm",
     ],
 )
 
@@ -16,6 +17,7 @@ cc_test(
     srcs = ["heuristic_algorithm_test.cc"],
     deps = [
         ":heuristic_algorithm",
+        "//oscm/median_algorithm",
         "@googletest//:gtest_main",
     ],
 )
