Barycenter into heuristic (#34)
* Started implementing barycenter. TODO: BUILD, tests, change bipartite_graph

* need to rebase with the changes on toolkitV2

* Implemented Barycenter. Works with bipartite_graph. The others are not in this branch

* Still a bug in barycenterAlgorithmEdges

* Bud resolved

* Still have to reduce the amount of for loops

* TODO: remove copying and do it in place

* Fixed barycenter. Removed loops and using references. the getFreeNodes function now is not const (since we shuffle nodes around).

* New test just to be sure

* Fixed Barycenter and added test

* Fixed comment. Tests pass

* Fixed merge conflicts. WORKSPACE was missing some lines and an argument had to be changed in the io reader test

* Replaced @com_google_googletest with @googletest

* Preparing experiments for barycenter (on bipartite_graph)

* Fixing to run experiments

* Fixing for experiments and renamming

* Renaming functions and tests

* Implemented simple combination of the Barycenter and Heuristic algorithms

* fixed build file

* Barycenter+Heuristic implemented for experiments

* Added heuristic_graph to deps on build file

* solving merge conflicts

* Fixed merges and cleaned code

--- a/experiments/algorithms/BUILD
+++ b/experiments/algorithms/BUILD
@@ -7,13 +7,16 @@ cc_library(
         "heuristic_algorithm.cc",
         "median_algorithm.cc",
         "reduction_algorithm.cc",
+        "barycenter_heuristic_algorithm.cc",
+
     ],
     hdrs = [
         "barycenter_algorithm.h",
         "heuristic_algorithm.h",
         "median_algorithm.h",
-        "problems.h",
         "reduction_algorithm.h",
+        "barycenter_heuristic_algorithm.h",
+        "problems.h",
     ],
     visibility = ["//visibility:public"],
     deps = [
@@ -24,6 +27,7 @@ cc_library(
         "//io",
         "//oscm/barycenter_algorithm",
         "//oscm/heuristic_algorithm",
+        "//oscm/barycenter_heuristic_algorithm",
         "//oscm/median_algorithm",
         "//oscm/reduction_algorithm",
         "@abseil-cpp//absl/status:statusor",
@@ -32,4 +36,6 @@ cc_library(
         "@henrixapp_toolkit//toolkit/ds:empty_problem",
     ],
     alwayslink = 1,
+
 )
+
