change leftRightSet to bit vectors

--- a/ds/reduction_graph/BUILD
+++ b/ds/reduction_graph/BUILD
@@ -8,6 +8,7 @@ cc_library(
     ],
     visibility = ["//visibility:public"],
     deps = [
+        ":bit_vector",
         "@abseil-cpp//absl/status",
     ],
 )
@@ -17,6 +18,27 @@ cc_test(
     srcs = ["reduction_graph_test.cc"],
     deps = [
         ":reduction_graph",
+        "@googletest//:gtest_main",
+    ],
+)
+
+
+cc_library(
+    name = "bit_vector",
+    hdrs = [
+        "bit_vector.h",
+    ],
+    visibility = ["//visibility:public"],
+    deps = [
+        "@abseil-cpp//absl/status",
+    ],  # <-- You were missing a closing parenthesis here
+)
+
+cc_test(
+    name = "bit_vector_test",
+    srcs = ["bit_vector_test.cc"],
+    deps = [
+        ":bit_vector",
         "@googletest//:gtest_main",
     ],
 )
