added different hash functions for testig, a lot of commneted code for testing

--- a/ds/reduction_graph/BUILD
+++ b/ds/reduction_graph/BUILD
@@ -9,7 +9,10 @@ cc_library(
     visibility = ["//visibility:public"],
     deps = [
         ":bit_vector",
+        #"//external_hash/unordered_dense/include/ankerl",
         "@abseil-cpp//absl/status",
+        #"@com_google_absl//absl/container:flat_hash_map",
+        #"@com_google_absl//absl/container:node_hash_map",
     ],
 )
 
